--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.platzi.android.rickandmorty.ui.MainActivity"
+        <activity
+            android:name="com.platzi.android.rickandmorty.ui.MainActivity"
+            android:exported="true"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.platzi.android.rickandmorty.ui.CharacterDetailActivity"
+        <activity
+            android:name="com.platzi.android.rickandmorty.ui.CharacterDetailActivity"
             android:label="@string/title_character_detail_activity"
             android:parentActivityName="com.platzi.android.rickandmorty.ui.MainActivity" />
     </application>
