--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext.kotlin_version = '1.6.10'
     ext.mockK_version = '1.9.3'
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -21,37 +20,36 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
 
 ext{
     //SDK & Tools
     minSdkVersion = 21
-    targetSdkVersion = 29
-    compileSdkVersion = 29
+    targetSdkVersion = 31
+    compileSdkVersion = 31
     versionCode = 1
     versionName = "1.0"
 
     //Versions
-    appCompatVersion = '1.1.0'
+    appCompatVersion = '1.4.0'
     cardViewVersion = '1.0.0'
-    constraintLayoutVersion = '1.1.3'
-    coreKTXVersion = '1.3.0'
-    coreTestingVersion = '1.1.1'
-    daggerVersion = '2.28'
-    glideVersion = '4.11.0'
-    gsonVersion = '2.8.6'
+    constraintLayoutVersion = '2.1.3'
+    coreKTXVersion = '1.7.0'
+    coreTestingVersion = '2.1.1'
+    daggerVersion = '2.41'
+    glideVersion = '4.13.1'
+    gsonVersion = '2.9.0'
     jUnitVersion = '4.13'
-    materialVersion = '1.1.0'
-    mockitoKotlinInlineVersion = '3.3.3'
-    mockitoKotlinVersion = '2.2.0'
-    okHttpLoggingInterceptorVersion = '4.7.2'
+    materialVersion = '1.5.0'
+    mockitoKotlinInlineVersion = '4.4.0'
+    mockitoKotlinVersion = '4.0'
+    okHttpLoggingInterceptorVersion = '4.9.3'
     pagingVersion = '2.1.2'
-    reactiveStreamsVersion = '2.2.0'
-    recyclerViewVersion = '1.1.0'
+    reactiveStreamsVersion = '2.4.1'
+    recyclerViewVersion = '1.2.0'
     retrofitVersion = '2.9.0'
-    roomVersion = '2.2.5'
+    roomVersion = '2.4.2'
     rxAndroidVersion = '2.1.1'
     rxJavaVersion = '2.2.19'
     swipeRefreshLayoutVersion = '1.1.0'
@@ -84,7 +82,7 @@ ext{
     materialLib = "com.google.android.material:material:$materialVersion"
 
     //Mockito
-    mockitoLib = "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockitoKotlinVersion"
+    mockitoLib = "org.mockito.kotlin:mockito-kotlin:$mockitoKotlinVersion"
     mockitoInlineLib = "org.mockito:mockito-inline:$mockitoKotlinInlineVersion"
 
     //OkHttp
