--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,8 +1,6 @@
-plugins {
-    id 'com.android.library'
-    id 'org.jetbrains.kotlin.android'
-}
+apply plugin: 'java-library'
+apply plugin: 'kotlin'
 
 dependencies {
-   implementation kotlinLib
+    implementation kotlinLib
 }
