--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 
     implementation project(":domain")
 
+    implementation project(":data")
+
     //Kotlin
     implementation kotlinLib
 
