--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,5 @@ include ':app'
 include ':domain'
 include ':data'
 include ':usecases'
+include ':framework:imagemanager'
+include ':framework:databasemanager'
