--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,14 +1,15 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.kapt'
 }
 
 android {
-    compileSdk 32
+    compileSdk rootProject.compileSdkVersion
 
     defaultConfig {
-        minSdk 19
-        targetSdk 32
+        minSdk rootProject.minSdkVersion
+        targetSdk rootProject.targetSdkVersion
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -30,5 +31,10 @@ android {
 }
 
 dependencies {
+    implementation("com.squareup:javapoet:1.13.0") // <-- added this
+
     implementation kotlinLib
+
+    implementation daggerLib
+    kapt daggerCompiler
 }
