--- a/framework/requestmanager/build.gradle
+++ b/framework/requestmanager/build.gradle
@@ -2,14 +2,15 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id("kotlin-parcelize")
+    id 'org.jetbrains.kotlin.kapt'
 }
 
 android {
-    compileSdk 32
+    compileSdk rootProject.compileSdkVersion
 
     defaultConfig {
-        minSdk 19
-        targetSdk 32
+        minSdk rootProject.minSdkVersion
+        targetSdk rootProject.targetSdkVersion
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -31,6 +32,8 @@ android {
 }
 
 dependencies {
+    implementation("com.squareup:javapoet:1.13.0") // <-- added this
+
     implementation project(":data")
     implementation project(":domain")
 
@@ -44,4 +47,7 @@ dependencies {
     //RxJava
     implementation rxAndroidLib
     implementation rxJavaLib
+
+    implementation daggerLib
+    kapt daggerCompiler
 }
