--- a/build.gradle
+++ b/build.gradle
@@ -36,14 +36,15 @@ ext {
     cardViewVersion = '1.0.0'
     constraintLayoutVersion = '2.1.3'
     coreKTXVersion = '1.7.0'
-    coreTestingVersion = '2.1.1'
+    coreTestingVersion = '1.4.0'
+    coreArchTestingVersion = '2.1.0'
     daggerVersion = '2.41'
     glideVersion = '4.13.1'
     gsonVersion = '2.9.0'
-    jUnitVersion = '4.13'
+    jUnitVersion = '4.13.2'
     materialVersion = '1.5.0'
     mockitoKotlinInlineVersion = '4.4.0'
-    mockitoKotlinVersion = '4.0'
+    mockitoKotlinVersion = '4.0.0'
     okHttpLoggingInterceptorVersion = '4.9.3'
     pagingVersion = '2.1.2'
     reactiveStreamsVersion = '2.4.1'
@@ -56,7 +57,9 @@ ext {
     viewPagerVersion = '1.0.0'
 
     //Core Testing
-    coreTestingLib = "android.arch.core:core-testing:$coreTestingVersion"
+    coreTestingLib = "androidx.test:core:$coreTestingVersion"
+    coreArchTestingLib = "androidx.arch.core:core-testing:$coreArchTestingVersion"
+
 
     //Dagger
     daggerCompiler = "com.google.dagger:dagger-compiler:$daggerVersion"
