--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
-buildscript {
-    ext.kotlin_version = '1.6.10'
-    ext.mockK_version = '1.9.3'
-    repositories {
-        google()
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+plugins {
+    id 'com.android.application' version '7.1.2' apply false
+    id 'com.android.library' version '7.1.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.google.dagger.hilt.android' version '2.41' apply false
 }
 
-allprojects {
-    repositories {
-        google()
-        jcenter()
-    }
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
 
 ext {
+    ext.kotlin_version = '1.6.10'
+    ext.mockK_version = '1.9.3'
+
     //SDK & Tools
     minSdkVersion = 21
     targetSdkVersion = 31
@@ -36,6 +26,7 @@ ext {
     cardViewVersion = '1.0.0'
     constraintLayoutVersion = '2.1.3'
     coreKTXVersion = '1.7.0'
+    fragmentKTXVersion = '1.4.1'
     coreTestingVersion = '1.4.0'
     coreArchTestingVersion = '2.1.0'
     daggerVersion = '2.41'
@@ -55,6 +46,7 @@ ext {
     rxJavaVersion = '2.2.19'
     swipeRefreshLayoutVersion = '1.1.0'
     viewPagerVersion = '1.0.0'
+    hilt_version = "2.41"
 
     //Core Testing
     coreTestingLib = "androidx.test:core:$coreTestingVersion"
@@ -64,6 +56,10 @@ ext {
     //Dagger
     daggerCompiler = "com.google.dagger:dagger-compiler:$daggerVersion"
     daggerLib = "com.google.dagger:dagger:$daggerVersion"
+
+    //Hilt
+    hiltLib = "com.google.dagger:hilt-android:$hilt_version"
+    hiltCompiler = "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     //Glide
     glideCompiler = "com.github.bumptech.glide:compiler:$glideVersion"
@@ -80,6 +76,7 @@ ext {
 
     //KTX
     ktxLib = "androidx.core:core-ktx:$coreKTXVersion"
+    fragmentKtxLib = "androidx.fragment:fragment-ktx:$fragmentKTXVersion"
 
     //Material
     materialLib = "com.google.android.material:material:$materialVersion"
@@ -114,8 +111,4 @@ ext {
     recyclerViewLib = "androidx.recyclerview:recyclerview:$recyclerViewVersion"
     swipeRefreshLayoutLib = "androidx.swiperefreshlayout:swiperefreshlayout:$swipeRefreshLayoutVersion"
     viewPagerLib = "androidx.viewpager2:viewpager2:$viewPagerVersion"
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
