--- a/framework/di/build.gradle
+++ b/framework/di/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id("kotlin-parcelize")
     id 'org.jetbrains.kotlin.kapt'
+    id("dagger.hilt.android.plugin")
 }
 
 android {
@@ -32,17 +32,18 @@ android {
 }
 
 dependencies {
-    implementation project(":data")
+
     implementation project(":domain")
+    implementation project(":data")
+    implementation project(":usecases")
+    implementation project(":framework:imagemanager")
+    implementation project(":framework:databasemanager")
+    implementation project(":framework:requestmanager")
 
     implementation kotlinLib
-
-    //Retrofit
-    implementation okHttpInterceptorLib
-    implementation retrofitRxJavaLib
-    implementation retrofitGsonLib
-
-    //RxJava
     implementation rxAndroidLib
-    implementation rxJavaLib
+
+    //Hilt
+    implementation hiltLib
+    kapt hiltCompiler
 }
