--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,17 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
 rootProject.name = 'RickAndMortyPlatzi'
 include ':app'
 include ':domain'
@@ -6,3 +20,4 @@ include ':usecases'
 include ':framework:imagemanager'
 include ':framework:databasemanager'
 include ':framework:requestmanager'
+include ':framework:di'
